--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.2",
+    "@capacitor/core": "^7.4.2",
     "@reduxjs/toolkit": "^2.8.1",
     "kaplay": "^3001.0.17",
     "kaplay-atb-plugin": "^0.2.0",
@@ -18,6 +20,7 @@
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "^7.4.2",
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
